--- a/styles/style.css
+++ b/styles/style.css
@@ -91,7 +91,8 @@ h1 {
     color: white;
     font-size: 2rem;
     font-weight: 600;
-    margin: 3rem auto 2rem auto;
+    padding: 3rem 0 2rem 0;
+    margin: 0 auto;
 }
 
 #hero-image {
@@ -205,6 +206,7 @@ nav.alt #nav-bar li p.active {
     width: 18vw;
     margin: 1rem;
     animation: 0.75s ease-in-out 0s 1 slideInFromTop;
+    display: none;
 }
 
 #nav-button {
