--- a/styles/style.css
+++ b/styles/style.css
@@ -91,18 +91,16 @@ h1 {
     color: white;
     font-size: 2rem;
     font-weight: 600;
-    padding: 3rem 0 2rem 0;
+    padding: 2vh 0 2vh 0;
     margin: 0 auto;
 }
 
 #hero-image {
-    width: min(70vw, 70vh);
+    width: min(70vw, 50vh);
     max-width: 700px;
     padding: 25vh 0 0 0;
-    position: absolute;
-    top: 0;
-    left: calc(50% - (min(70vw, 700px,70vh)/2));
-    right: 50%;
+    position: relative;
+    margin: 0 auto;
     z-index: 1;
     pointer-events: none;
 }
@@ -116,7 +114,7 @@ h1 {
 }
 
 #welcome-text {
-    padding: 75vh 3vw 0 3vw;
+    padding: 0 3vw 0 3vw;
     position: relative;
     z-index: 2;
 }
@@ -127,7 +125,6 @@ h1 {
     border-radius: 1vh;
     max-width: 45vh;
     transition: background-color 0.25s ease-in-out;
-    height: min(17vh, 50vw);
     margin: 0 auto;
 }
 
