--- a/styles/style.css
+++ b/styles/style.css
@@ -76,8 +76,14 @@ main {
     width: 100%;
     height: 100vh;
     padding: 0;
-    overflow: hidden;
-    background-position: scroll;
+    overflow: hidden; 
+    scroll-behavior: smooth;
+    background-image: url("../images-and-svgs/svgs/logos/QuickBite-logo-red-no-fill-whiteteeth.svg");
+    background-repeat: no-repeat;
+    background-size: min(70%, 60vh, 700px) auto;
+    background-attachment: fixed;
+    background-position: center;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.5);
 }
 
 .content {
@@ -91,7 +97,8 @@ h1 {
     color: white;
     font-size: 2rem;
     font-weight: 600;
-    padding: 2vh 0 2vh 0;
+    padding: 0;
+    
     margin: 0 auto;
 }
 
@@ -114,18 +121,23 @@ h1 {
 }
 
 #welcome-text {
-    padding: 0 3vw 0 3vw;
+    padding: 70vh 3vw 0 3vw;
     position: relative;
     z-index: 2;
 }
 
 
 #text-and-button {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; 
     background-color: transparent;
     border-radius: 1vh;
     max-width: 45vh;
     transition: background-color 0.25s ease-in-out;
     margin: 0 auto;
+    height: 22vh;
 }
 
 .logo-text-main {
@@ -204,7 +216,6 @@ nav.alt #nav-bar li p.active {
     width: 18vw;
     margin: 1rem;
     animation: 0.75s ease-in-out 0s 1 slideInFromTop;
-    display: none;
 }
 
 #nav-button {
@@ -503,5 +514,9 @@ footer.alt {
 
     #nav-bar {
         display: none;
+    }
+
+    #welcome-section {
+        background-attachment: scroll ;
     }
 }
