--- a/styles/style.css
+++ b/styles/style.css
@@ -124,7 +124,6 @@ h1 {
     position: relative;
 }
 
-
 #text-and-button {
     align-items: center; 
     background-color: transparent;
@@ -282,6 +281,7 @@ nav.alt #nav-bar li p.active {
     padding: 1rem 0 1rem 0;
     display: none;
     background-color: rgba(241, 158, 57, 1);
+    border: 1px solid rgba(255, 255, 255, 0.5);
 }
 
 #nav-bar li .sub-menu li {
@@ -385,7 +385,7 @@ nav.alt #nav-bar li p.active {
 #restaurant-info {
     width: 90%;
     font-size: 1rem;
-    padding-top: 5rem;
+    padding-top: 6rem;
    position: relative;
 }
 
@@ -415,8 +415,8 @@ p .logo-text {
 }
 
 .non-menu li {
-    padding: 2.5rem 0 3.5rem 0;
-    margin: 0 auto;
+    padding:  0;
+    margin: 3rem auto;
 }
 
 .non-menu h2 {
@@ -437,7 +437,7 @@ p .logo-text {
 }
 
 .continue-prompt {
-    padding: 3rem;
+    margin: 2rem;
     text-align: center;
     background-color: var(--quickbite-red);
     position: relative;
@@ -465,7 +465,7 @@ footer.alt {
     justify-content: left;
     align-items: center;
     padding: 1.5rem 0 1rem 0;
-    margin: 0 auto;
+    margin-left: 1rem;
 }
 
 #socialmedia-icons img {
@@ -486,6 +486,7 @@ footer.alt {
     justify-content: right;
     align-items: center;
     font-size: 1.5rem;
+    margin-right: 1rem;
 }
 
 #portfolio-link {
