--- a/styles/style.css
+++ b/styles/style.css
@@ -416,17 +416,17 @@ p .logo-text {
 
 .non-menu li {
     padding:  0;
-    margin: 3rem auto;
+    margin: 2rem auto;
 }
 
 .non-menu h2 {
     color: var(--quickbite-gold);
-    margin: 0 auto 0.5rem auto;
+    margin: 0 auto;
     text-align: center;
 }
 
 .non-menu h3 {
-    margin: 0 auto 0.5rem auto;
+    margin: 0 auto;
     text-align: center;
 }
 
