--- a/styles/buttons.css
+++ b/styles/buttons.css
@@ -4,16 +4,20 @@
     height: 3rem;
     width: 6rem;
     text-align: center;
+    position: absolute;
+    bottom: 1rem;
+    left: calc(50% - 3rem);
+    right: calc(50% - 3rem);
 }
 
 
-#down-button-link {
+.down-button-link {
     display: inline-block;
     width: 6rem;
     height: 3rem;
 }
 
-#down-button-link p {
+.down-button-link p {
     display: none;
     text-align: center;
     height: 3rem;
